k3s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zakolko-service
  namespace: logos
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: zakolko-backend
